# listandstruct

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  recipe.yaml
.github/workflows/: test.yml
listandstruct/: __init__.py  listandstruct.py
tests/: __init__.py  test_stub.py
