[project]
name = "listandstruct"
description = "Helpers for pandas and pyarrow list/struct arrays"
license = "MIT"
version = "0.0.1"
readme = "README.md"
authors = [{ name = "chourmo" }]
requires-python = ">=3.14"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = "3.14.*"
pandas = "*"
pyarrow = "*"
numpy = "*"
rattler-build = ">=0.61.4,<0.62"

[tool.pixi.pypi-dependencies]
listandstruct = { path = ".", editable = true }
pre-commit = "*"
pytest = ">=9.0.2,<10"

[tool.pixi.tasks]
test = "pytest -q"
hooks = "pre-commit run --all-files"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
